feat: Add data privacy screen and logout shortcut
Introduces a new "Data Privacy" screen for users to manage their privacy settings.
Also adds a web app manifest shortcut for quick logout from the PWA.

--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,14 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#28CBC9",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "shortcuts": [
+    {
+      "name": "Sign Out",
+      "short_name": "Sign Out",
+      "description": "Sign out of your account",
+      "url": "/?action=logout",
+      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+    }
+  ]
 }
