--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.1.1",
     "react": "^19.1.1",
     "@google/genai": "^1.15.0",
     "marked": "^16.2.0",
-    "@supabase/supabase-js": "^2.45.2"
+    "@supabase/supabase-js": "^2.45.2",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
