--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^1.15.0",
     "marked": "^16.2.0",
     "@supabase/supabase-js": "^2.45.2",
+    "react-router-dom": "6.25.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
