--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/((?!api/|.*\\.\\w+).*)",
+      "source": "/((?!api/)[^.]*)",
       "destination": "/index.html"
     }
   ]
