--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@google/genai": "^1.15.0",
     "@supabase/supabase-js": "^2.45.2",
+    "@vercel/speed-insights": "^1.0.12",
     "marked": "^16.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
