--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@capacitor/android": "^6.0.0",
-    "@capacitor/ios": "^6.0.0",
+    "@capacitor/app": "^6.0.0",
     "@capacitor/cli": "^6.0.0",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/haptics": "^6.0.0",
+    "@capacitor/ios": "^6.0.0",
+    "@capacitor/keyboard": "^6.0.0",
+    "@capacitor/status-bar": "^6.0.0",
     "@google/genai": "^1.15.0",
     "@supabase/supabase-js": "^2.45.2",
     "@vercel/speed-insights": "^1.0.12",
